--- a/style.css
+++ b/style.css
@@ -1,30 +1,44 @@
 body {
     margin: 0;
     background-color: blue;
+    align-content: center;
+    display: flex;
+    justify-content: center;
+}
+
+:root {
+    --box-width: var(--box-width);
+    --container-width: 256px
 }
 
 .container {
     display: flex;
-    width: 256px;
     align-items: center;
     justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
-    margin-top: 20%;
-    margin-left: 30%;
+    margin-top: 80px;
+    margin-left: 20%;
     margin-right: 30%;
-    
+    padding: 0;
+    width: var(--container-width);
+    max-width: 960px;
+    max-height: 960px;
+    align-content: center;
     
 }
 .numbered {
     background-color: black;
-    width: 16px;
-    height: 16px;
-    margin: 0;
-    border: none;
     flex-grow: 0;
+    flex-basis: 1;
+    margin: 0;
+    width: var(--box-width);
+    height: 14px;
     cursor: crosshair;
+    border-radius: 0.5px;
+    -webkit-border-radius: 0.5px;
+    -moz-border-radius: 0.5px;
+    -ms-border-radius: 0.5px;
+    -o-border-radius: 0.5px;
+    border: 1px solid white;
 }
-/*.numbered:hover {
-    background-color: red;
-}*/
